--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,19 +2,20 @@
 name = "eoforeststac"
 version = "0.1.0"
 description = "Python tools for generating STAC catalogs of forest EO data"
-authors = [{ name="Simon", email="you@example.com" }]
+authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
 license = "MIT"
 dependencies = [
     "pystac==1.12.1",
     "stactools",
     "boto3",
+    "botocore>=1.38.23,<1.38.28",
     "rasterio",
     "fsspec==2025.2.0",
     "pyproj",
     "xarray",
-    "s3fs"
+    "s3fs==2025.5.1",             
+    "zarr==2.19"
 ]
-
 [tool.setuptools.packages.find]
 where = ["eoforeststac"]
 
