--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,19 +4,28 @@ version = "0.1.0"
 description = "Python tools for generating STAC catalogs of forest EO data"
 authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
 license = "MIT"
+
 dependencies = [
-    "pystac==1.12.1",
-    "stactools",
-    "boto3",
-    "botocore>=1.38.23,<1.38.28",
-    "rasterio",
-    "fsspec==2025.5.1",
-    "pyproj",
-    "xarray",
-    "zarr==2.18",
-    "s3fs==2025.5.1",
-    "rioxarray"
+    # --- STAC ecosystem ---
+    "pystac>=1.12,<2.0",
+    "stactools>=0.4.4",
+
+    # --- S3 / Ceph compatibility ---
+    "boto3>=1.35.0,<1.36.0",       # Compatible with Ceph RGW
+    "botocore>=1.35.0,<1.36.0",    # CRITICAL: avoid 1.38.x and 1.37.x
+    "s3fs>=2024.5.0,<2025.0.0",    # Matches botocore 1.35 cycle
+
+    # --- Raster / xarray / Zarr I/O ---
+    "xarray>=2024.1.0",
+    "rasterio>=1.3.0",
+    "rioxarray>=0.15.0",
+    "zarr>=2.18,<3.0",
+    "fsspec>=2024.5.0,<2025.0.0",
+
+    # --- Geometry / CRS ---
+    "pyproj>=3.6.0"
 ]
+
 [tool.setuptools]
 packages = ["eoforeststac"]
 
