--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,31 @@ authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
 license = "MIT"
 
 dependencies = [
-    # --- STAC ecosystem ---
-    "pystac>=1.12,<2.0",
+    # --- Core numerical stack ---
+    "numpy<2.0",
+    "xarray>=2024.1.0",
+
+    # --- Zarr ---
+    "zarr>=2.18,<3.0",
+
+    # --- Chunking ---
+    "dask[array]>=2024.4.0",
+
+    # --- S3 / Ceph ---
+    "boto3>=1.35,<1.36",
+    "botocore>=1.35,<1.36",
+    "s3fs>=2024.5,<2025.0",
+    "fsspec>=2024.5,<2025.0",
+
+    # --- Raster ---
+    "rasterio>=1.3",
+    "rioxarray>=0.15",
+
+    # --- STAC ---
+    "pystac>=1.12,<2",
     "stactools>=0.4.4",
 
-    # --- S3 / Ceph compatibility ---
-    "boto3>=1.35.0,<1.36.0",       # Compatible with Ceph RGW
-    "botocore>=1.35.0,<1.36.0",    # CRITICAL: avoid 1.38.x and 1.37.x
-    "s3fs>=2024.5.0,<2025.0.0",    # Matches botocore 1.35 cycle
-
-    # --- Raster / xarray / Zarr I/O ---
-    "xarray>=2024.1.0",
-    "rasterio>=1.3.0",
-    "rioxarray>=0.15.0",
-    "zarr>=2.18,<3.0",
-    "fsspec>=2024.5.0,<2025.0.0",
-
-    # --- Geometry / CRS ---
-    "pyproj>=3.6.0"
+    "pyproj>=3.6"
 ]
 
 [tool.setuptools]
