--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,26 @@
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = [
+    "setuptools>=64",
+    "wheel",
+    "setuptools-scm>=8"
+]
+
 [project]
 name = "eoforeststac"
 version = "0.1.0"
 description = "Python tools for generating STAC catalogs of forest EO data"
 authors = [{ name="Simon Besnard", email="simon.besnard@gfz.de" }]
-license = "MIT"
+license = { file = "LICENSE" }
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
+]
+requires-python = ">=3.10"
 
 dependencies = [
     # --- Core numerical stack ---
@@ -33,6 +50,33 @@ dependencies = [
     "pyproj>=3.6"
 ]
 
-[tool.setuptools]
-packages = ["eoforeststac"]
+[project.urls]
+homepage = "https://github.com/simonbesnard1/eoforeststac"
+documentation = "https://eoforeststac.readthedocs.io/en/latest/"
+source = "https://github.com/simonbesnard1/eoforeststac"
+tracker = "https://github.com/simonbesnard1/eoforeststac/issues"
+
+[tool.mypy]
+enable_error_code = ["ignore-without-code", "redundant-self", "redundant-expr"]
+exclude = ['build']
+files = "eoforeststac"
+show_error_context = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+[tool.ruff]
+extend-exclude = ["doc", "_typed_ops.pyi"]
+line-length = 100
+
+[tool.pytest.ini_options]
+testpaths = ["gedidb/tests"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+exclude = ["eoforeststac/tests*", "eoforeststac/tests/*", "eoforeststac/tests/**/*", "scripts*"]
+
+[tool.setuptools_scm]
+fallback_version = "9999"
+
 
