--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ extend-exclude = ["doc", "_typed_ops.pyi"]
 line-length = 100
 
 [tool.pytest.ini_options]
-testpaths = ["gedidb/tests"]
+testpaths = ["eoforeststac/tests"]
 
 [tool.setuptools.packages.find]
 where = ["."]
