--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     # --- Raster ---
     "rasterio>=1.3",
     "rioxarray>=0.15",
+    "geopandas"
 
     # --- STAC ---
     "pystac>=1.12,<2",
