--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint black
+          pip install "black==25.12.0" "pylint==4.0.4"
           python -m pip install --no-deps -e .
 
       - name: Run Black (Check Code Formatting)
