--- a/ci/requirements/environment.yml
+++ b/ci/requirements/environment.yml
@@ -5,7 +5,7 @@ channels:
 
 dependencies:
   # ---- Runtime base (keep python explicit for CI matrix control) ----
-  - python>=3.10,<3.14
+  - python==3.12
   - pip
 
   # ---- Prefer conda-forge for compiled geo stack (less CI suffering) ----
