--- a/ci/requirements/environment.yml
+++ b/ci/requirements/environment.yml
@@ -5,7 +5,7 @@ channels:
 
 dependencies:
   # ---- Runtime base (keep python explicit for CI matrix control) ----
-  - python==3.12
+  - python>=3.10,<3.14
   - pip
 
   # ---- Prefer conda-forge for compiled geo stack (less CI suffering) ----
@@ -46,7 +46,7 @@ dependencies:
       - setuptools-scm>=8
 
       # project deps (match your pyproject pins/constraints)
-      - numpy==2.4.1
+      - numpy
       - xarray==2025.12.0
       - zarr==2.18.0
       - numcodecs==0.15.1
